Changes in version 1.4 (... 2007)

 - Irrlicht now has its own file format for static meshes. It is based on xml and has the 
   extension .irrmesh. Irrlicht is able to write every IMesh to this file format, and of course to
   read it back again.
   
 - Irrlicht is now able to write Meshes out into files. Use ISceneManager::createMeshWriter()
   to obtain an interface with which you can write out meshes. Currently, an own .irrmesh
   file format is supported as well as the COLLADA file format.
   
 - the base class for nearly all Irrlicht classes has been renamed from IUnknown to IReferenceCounted

 - fixed the keyboard autorepeat difference betwenn Linux and Windows. Thanks to denton we now have only KeyPressed events on both systems in case of autorepeat.

 - Added several new particle emitters and affectors from IrrSpintz. Also some new getter and setter methods were added.

 - D3D transparent materials do not disable zbuffer writing automatically anymore. This has to be done by the user to keep those settings configurable.

 - OpenGL texture now also require a regenerateMipmapLevels() after unlocking. This is the same as for d3d devices now.

 - Point sprite support in the driver. Point sprites use just one 3d vertex and a size to create a textured billboard on the GPU. This can provide fast particle systems, especially in combination with shaders. The proper particle extension will follow later on as it needs some more refactoring.

 - OpenGL 2D drawing accuracy fix by tuXXX

 - Added OnResize and getCurrentRenderTargetSize to the software video drivers.

 - Added Spot light type for dynamic lights. Note that both position and direction for all dynamic lights are now determined by the LightSceneNode, the SLight attributes are only used for internal purposes.